--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,15 +33,17 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  cloud_firestore: ^4.13.4
-  firebase_auth: ^4.15.3
-  firebase_core: ^2.24.2
-  google_sign_in: ^6.1.6
-  firebase_storage: ^11.6.1
-  file_picker: ^6.1.1
+  provider: ^6.0.5
+  firebase_core: ^2.27.0
+  firebase_auth: ^4.16.0
+  cloud_firestore: ^4.14.0
+  firebase_storage: ^11.6.0
   image_picker: ^1.0.4
+  file_picker: ^6.1.1
   table_calendar: ^3.0.9
+  cupertino_icons: ^1.0.2
+  shared_preferences: ^2.2.2
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
